--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,5 +1,7 @@
 EXEC_NAME = litecomp
 
+INCLUDE_DIR =includes
+
 OBJ_FILES =	\
 main.o		\
 parser.o 	\
@@ -11,7 +13,10 @@ parser.cpp		\
 parser.hpp
 
 all: $(OBJ_FILES)
-	g++ $< $(EXEC_NAME) -std=c++11
+	g++ $< $(EXEC_NAME) -std=c++11 -I$(INCLUDE_DIR)
+
+%.o:%.cpp
+	g++ $< -o $@ -std=c++11 -I$(INCLUDE_DIR)
 
 parser.cpp: parser.y
 	bison -d -o $@ $< -v
