Fixed Windows compilation process

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -2,6 +2,10 @@ EXEC_NAME = litecomp
 
 INCLUDE_DIR =includes
 
+CPP_FLAGS =	\
+-std=gnu++11	\
+-I$(INCLUDE_DIR)
+
 OBJ_FILES =	\
 parser.o 	\
 tokens.o 	\
@@ -12,11 +16,18 @@ tokens.cpp 		\
 parser.cpp		\
 parser.hpp
 
+ifeq ($(OS), Windows_NT)
+	LEX_PRG := flex
+	EXEC_EXTENSION := .exe
+else
+	LEX_PRG := lex
+endif
+
 all: $(OBJ_FILES)
-	g++ $(OBJ_FILES) -o $(EXEC_NAME) -std=c++11 -I$(INCLUDE_DIR)
+	g++ $(OBJ_FILES) -o $(EXEC_NAME) $(CPP_FLAGS)
 
 %.o:%.cpp
-	g++ -c $< -o $@ -std=c++11 -I$(INCLUDE_DIR)
+	g++ -c $< -o $@ $(CPP_FLAGS)
 
 parser.cpp: parser.y
 	bison -d -o $@ $< -v
@@ -24,7 +35,7 @@ parser.cpp: parser.y
 parser.hpp: parser.cpp
 
 tokens.cpp: tokens.l parser.hpp
-	lex -o $@ $<
+	$(LEX_PRG) -o $@ $<
 
 clean:
-	rm -f $(OBJ_FILES) $(GEN_FILES_CLEANUP) parser.output
+	rm -f $(OBJ_FILES) $(GEN_FILES_CLEANUP) parser.output $(EXEC_NAME)$(EXEC_EXTENSION)
